--- a/.github/workflows/main_exam1.yml
+++ b/.github/workflows/main_exam1.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy PHP app to Azure Web App - Exam1
+name: Build and deploy PHP app to Azure Web App - EXAM1
 
 on:
   push:
@@ -21,7 +21,7 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.1'
+          php-version: '8.2'
 
       - name: Check if composer.json exists
         id: check_files
@@ -45,9 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -64,15 +62,15 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_F26BF75512154D439C1E9AF7CA3CA59B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_7C0C6244B0394B4098C982D9D5590B09 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_768651CAFABB4B3C886C0C46DCABCAC6 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_45E8B0F471CD4E51AAFCE7300725685C }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_349367D873C343CCB622D3475F6EF815 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_A3BDFAE8AC5E48C499D94A86C8D13EAA }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
-          app-name: 'Exam1'
+          app-name: 'EXAM1'
           slot-name: 'Production'
           package: .
           
